<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">falcon</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcome">Falcon - The better way to run</string>
    <string name="curvy">Curvy (max battery drain)</string>
    <string name="somewhatcurvy">Straight as a Rainbow</string>
    <string name="straight">Straight as an Arrow</string>
    <string name="log">Finish and Log</string>
    <string name="toggleTextOff">Start</string>
    <string name="toggleTextOn">Stop</string>
    <string name="time">Time:&#160;</string>
    <string name="pace">Pace:&#160;</string>
    <string name="distance">Distance:&#160;</string>
    <string name="miles_abbr">&#160;mi</string>
    <string name="min_abbr">&#160;min</string>
    <string name="miles_min_abbr">&#160;min/mi</string>

</resources>
